bogdan-mierloiu/web-client/nginx-service.yaml
# nginx-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80


# minikube service nginx-service --url
